examples/test/testpolicy14318.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14318
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key34: value16
      key39: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value47
          key34: value19
      podSelector:
        matchLabels:
          key16: value15
          key34: value46
          key41: value25
